src/css/recipe.css
.recipe {
/*  background: url('../img/chalkboard.jpg');
  background-size: cover;*/
  color: #black;
  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
  position: relative;
  border-radius: 15px;
  box-shadow: 0 0 5px 2px rgba(0, 0, 0, .3);
  transform-style: preserve-3d;
  transition: 150ms;
  cursor: pointer;
  transform: perspective(1000px) rotateY(var(--rotate-y, 0)) translateY(var(--translate-y, 0));
}

.recipe:hover {
  --translate-y: -2px;
  box-shadow: 0 0 5px 2px rgba(0, 0, 0, .5);
}

.recipe.flip {
   --rotate-y: 180deg;
}

.recipe__image {
  border-radius: 10px 10px 40% 0;
  height:220px;
  object-fit: cover;
  width: 100%;
}

.recipe .front,
.recipe .back {
  position: absolute;
  padding: 1rem;
  backface-visibility: hidden;
  background: white;
  border-radius: 15px;
  height: auto;
}

.recipe .back {
  transform: rotateY(180deg);
  color: black;
}

/*.recipe__content {
  padding:30px;
}*/

/*.recipe__header {
  margin-bottom: 30px;
}*/

.recipe__title {
  padding: 30px 0;
  font-size: 1.3rem;
  color: #EFD5A5;
  font-family: 'Fredericka the Great', cursive;
  text-transform: uppercase;
  letter-spacing:4px;
  text-align: center;
}

.recipe__row {
  margin-top: 10px;
}

.recipe__label {
  margin-right: 5px;
  text-transform: uppercase;
  font-size:14px;
}

/*.recipe__value {
  font-weight: 300;
}*/

.recipe__value--indented {
  margin-top:10px;
  margin-left: 20px;
}

/*.recipe__instructions {
  white-space: pre-wrap;
}
*/

